--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>prueba1</title>
+    <title>inicio</title>
   </head>
   <body>
-    <h1>Puta pruba numero 1</h1>
-    <p>Hello word</p>
+    background-image:url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjCxvY2zitz4RxOt3efgfBQJPFToXvGsszPmOU0DOYDfJG3U1Rlsf-lPubveoOHNevoH2LAVjGX2CQ3DCZnYWxJFMxTMabsgVLJo8vcbOmHBTJWr7K3rSU_T9qF-YURhDszwVXOA7QJJp7JjHD4mlwa_x-79XhqKQ5kL3Z7WvJAtoq6F3-3OJUcJPHQLxA/s3577/fondo%20web.png);
+    background-repeat: repeat-y;
+    background-attachment: fixed;
+    background-size: 100%;
   </body>
 </html>
