--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style type='text/css'>
+      body{
+        width:75%;
+        margin-left:auto;
+        margin-right:auto;
+        line-height:1;
+        background-image:url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjCxvY2zitz4RxOt3efgfBQJPFToXvGsszPmOU0DOYDfJG3U1Rlsf-lPubveoOHNevoH2LAVjGX2CQ3DCZnYWxJFMxTMabsgVLJo8vcbOmHBTJWr7K3rSU_T9qF-YURhDszwVXOA7QJJp7JjHD4mlwa_x-79XhqKQ5kL3Z7WvJAtoq6F3-3OJUcJPHQLxA/s3577/fondo%20web.png);
+        background-repeat: repeat-y;
+        background-attachment: fixed;
+        background-size: 100%;
+
+  }
+    </style>
     <title>inicio</title>
   </head>
   <body>
-    background-image: url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjCxvY2zitz4RxOt3efgfBQJPFToXvGsszPmOU0DOYDfJG3U1Rlsf-lPubveoOHNevoH2LAVjGX2CQ3DCZnYWxJFMxTMabsgVLJo8vcbOmHBTJWr7K3rSU_T9qF-YURhDszwVXOA7QJJp7JjHD4mlwa_x-79XhqKQ5kL3Z7WvJAtoq6F3-3OJUcJPHQLxA/s3577/fondo%20web.png);
-    background-repeat: repeat-y;
-    background-attachment: fixed;
-    background-size: 100%;
   </body>
 </html>
