--- a/index.html
+++ b/index.html
@@ -1,21 +1,167 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style type='text/css'>
-      body{
-        width:75%;
-        margin-left:auto;
-        margin-right:auto;
-        line-height:1;
-        background-image:url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjCxvY2zitz4RxOt3efgfBQJPFToXvGsszPmOU0DOYDfJG3U1Rlsf-lPubveoOHNevoH2LAVjGX2CQ3DCZnYWxJFMxTMabsgVLJo8vcbOmHBTJWr7K3rSU_T9qF-YURhDszwVXOA7QJJp7JjHD4mlwa_x-79XhqKQ5kL3Z7WvJAtoq6F3-3OJUcJPHQLxA/s3577/fondo%20web.png);
-        background-repeat: repeat-y;
-        background-attachment: fixed;
-        background-size: 100%;
-
-  }
-    </style>
-    <title>inicio</title>
-  </head>
-  <body>
-  </body>
+    <head>
+        <style type='text/css'>
+            body{
+                text-align: center;
+                background-image:url("./img/fondoWeb.png");
+                background-repeat: repeat-y;
+                background-attachment: fixed;
+                background-size: 100%;
+                font-family: Arial;
+                width: 75%;
+                margin: auto;
+                padding: 50px;
+            }
+            .header{
+                background-image: url("img/logoP.png");
+                filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.8));
+                background-repeat: no-repeat;
+                padding: 57px;
+                width: 75%;
+                overflow: hidden;
+            }
+            .topnav {
+                overflow: hidden;
+            }
+            .separador1{
+                background-image: url('./img/web1.png');
+                filter: drop-shadow(2px 2px 2px rgb(0, 0, 0, 0.500));
+                background-repeat: repeat-x;
+                width: auto;
+                height: 32px;
+                background-position: center;
+            }
+            .separador2{
+                background-image: url('./img/web1.png');
+                background-repeat: repeat-x;
+                width: auto;
+                height: 32px;
+                background-position: center;
+                transform: scaleY(-1); 
+                filter: drop-shadow(2px -2px 2px rgba(0, 0, 0, 0.500));
+            }
+            .separador3{
+                background-image: url('./img/web2.png');
+                background-repeat: repeat-x;
+                width: auto;
+                height: 20px;
+                background-position: center; 
+                filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.500));
+            }
+            .btn1{
+                float: left;
+                margin: 1px 2px 1px;
+                background-image:url(./img/boton1.png);
+                background-color: rgba(0, 0, 0, 0);
+                border-style: hidden;
+                background-repeat:no-repeat;
+                filter: drop-shadow(1px 1px 2px rgb(0, 0, 0));
+                height:40px;
+                width:83px;
+                font-size: 17px;
+                color: rgb(255, 255, 255);
+                text-shadow:
+                0px 0px 4px black,
+                0px 0px 4px rgb(0, 0, 0),
+                0px 0px 4px rgb(0, 0, 0),                
+                0px 0px 4px rgb(0, 0, 0),
+                0px 0px 4px rgb(0, 0, 0);
+            }
+            .btn2{
+                float: right;
+                margin: 1px 2px 1px;
+                background-image:url(./img/boton1.png);
+                background-color: rgba(0, 0, 0, 0);
+                border-style: hidden;
+                background-repeat:no-repeat;
+                filter: drop-shadow(1px 1px 2px rgb(0, 0, 0));
+                height:40px;
+                width:83px;
+                font-size: 17px;
+                color: rgb(255, 255, 255);
+                text-shadow:
+                0px 0px 4px black,
+                0px 0px 4px rgb(0, 0, 0),
+                0px 0px 4px rgb(0, 0, 0),
+                0px 0px 4px rgb(0, 0, 0),                
+                0px 0px 4px rgb(0, 0, 0);
+            }
+            .footer{
+                position: fixed;
+                width: 75%;
+                bottom: 0px;
+                text-align: center;
+            }
+            .cuerpo{
+                border-style: solid;
+                border: 1px;
+            }
+            .esquina1{
+                z-index: 1;
+                position: absolute;
+                left: 0px;
+                top: 0px;
+                background: url(./img/web3.png);
+                height:119px;
+                width:171px;
+            }
+            .esquina2{
+                z-index: 1;
+                position: absolute;
+                right: 0px;
+                top: 0px;
+                background: url(./img/web3b.png);
+                height:119px;
+                width:171px;
+            }
+            .esquina3{
+                z-index: 1;
+                position: absolute;
+                left: 1px;
+                bottom: 0px;
+                background: url(./img/web3c.png);
+                height:126px;
+                width:171px;
+            }
+            .esquina4{
+                z-index: 1;
+                position: absolute;
+                right: 1px;
+                bottom: 0px;
+                background: url(./img/web3d.png);
+                height:126px;
+                width:171px;
+            }
+        </style>
+        <div class="esquina1"></div>        
+        <div class="esquina2"></div>
+        <div class="esquina3"></div>
+        <div class="esquina4"></div>
+        <div class="header">
+        </div>
+        <div class="separador1">
+        </div>
+        <div class="topnav">
+            <button class="btn1">Inicio</button>
+            <button class="btn1">Tienda</button>
+            <button class="btn1">Contacto</button>
+            <button class="btn2">Carro</button>
+        </div>
+        <div class="separador2">
+        </div>
+        <body>
+            <img src="./img/consbar2.gif" alt="">
+        </body>
+        <div class="footer">
+            <div class="separador1"></div>
+            <p>© Guda Accesorios™ <span id="ano"></span>. Todos los derechos reservados.</p>
+             <div class="separador2"></div>
+        </div>           
+    </head>
+    <script>//actualiza el año del copyright
+        const d = new Date();
+        let year = d.getFullYear();
+        document.getElementById("ano").innerHTML = year;
+    </script>
 </html>
