--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <style type='text/css'>
             body{
                 text-align: center;
-                background-image:url("./img/fondoWeb.png");
+                background-image:url("./img/fondoweb.png");
                 background-repeat: repeat-y;
                 background-attachment: fixed;
                 background-size: 100%;
